--- a/hosts/merchant/package.json
+++ b/hosts/merchant/package.json
@@ -42,6 +42,7 @@
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
+    "qrcode": "^1.3.4",
     "qs": "^6.7.0",
     "screenfull": "4.2.0",
     "showdown": "1.9.0",
