--- a/ui/facilitator/package.json
+++ b/ui/facilitator/package.json
@@ -13,8 +13,7 @@
   },
   "lint-staged": {
     "src/**/*.{js,vue}": [
-      "eslint --fix",
-      "git add"
+      "eslint --fix"
     ]
   },
   "keywords": [
