--- a/ui/merchant/.env.development
+++ b/ui/merchant/.env.development
@@ -5,7 +5,8 @@ ENV = 'development'
 VUE_APP_BASE_API = '/dev-api'
 
 # file upload url
-VUE_APP_UPLOAD_URL = 'https://jsonplaceholder.typicode.com/posts/'
+#VUE_APP_UPLOAD_URL = 'https://jsonplaceholder.typicode.com/posts/'
+VUE_APP_UPLOAD_URL = 'http://127.0.0.1:8001/hosts/files/public/upload/image/merchant-files'
 
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
 # to control whether the babel-plugin-dynamic-import-node plugin is enabled.
