--- a/ui/merchant/.env.production
+++ b/ui/merchant/.env.production
@@ -5,3 +5,6 @@ ENV = 'production'
 
 # base api
 VUE_APP_BASE_API = '/hosts/www/public/'
+
+# file upload url
+VUE_APP_UPLOAD_URL = '/hosts/files/public/upload/image/merchant-files'
