正在处理商户申请开发支付渠道的业务逻辑

--- a/common/config/database/asbamboo.qirifu.common.model.merchantChannelLog.Entity.dcm.yml
+++ b/common/config/database/asbamboo.qirifu.common.model.merchantChannelLog.Entity.dcm.yml
@@ -33,6 +33,7 @@ asbamboo\qirifu\common\model\merchantChannelLog\Entity:
       type: string
       nullable: false
       length: 255
+      column: 'log_desc'
       options:
         default: '0'
         comment: '说明'
