支付通道申请状态变更时向用户发送邮件通知

--- a/common/config/database/asbamboo.qirifu.common.model.merchant.Entity.dcm.yml
+++ b/common/config/database/asbamboo.qirifu.common.model.merchant.Entity.dcm.yml
@@ -40,6 +40,13 @@ asbamboo\qirifu\common\model\merchant\Entity:
       options:
         default: ''
         comment: '联系电话'
+    link_email:
+      type: string
+      length: 255
+      nullable: false
+      options:
+        default: ''
+        comment: '联系Email'
     create_time:
       type: integer
       nullable: false
