处理商户端首页样式

--- a/ui/merchant/.env.development
+++ b/ui/merchant/.env.development
@@ -4,6 +4,9 @@ ENV = 'development'
 # base api
 VUE_APP_BASE_API = '/dev-api'
 
+# 是否需要向后台请求获取系统信息，当这个选项等于false，系统后台修改了配置信息后，浏览器中展示的系统信息不能更新
+VUE_APP_SYSTEM_INFO_IS_FROM_API = true
+
 # file upload url
 #VUE_APP_UPLOAD_URL = 'https://jsonplaceholder.typicode.com/posts/'
 VUE_APP_UPLOAD_URL = 'http://127.0.0.1:8001/hosts/files/public/upload/image/merchant-files'
