--- a/ui/merchant/.env.production
+++ b/ui/merchant/.env.production
@@ -3,6 +3,9 @@ NODE_ENV = production
 # just a flag
 ENV = 'production'
 
+# 是否需要向后台请求获取系统信息，当这个选项等于false，系统后台修改了配置信息后，浏览器中展示的系统信息不能更新
+VUE_APP_SYSTEM_INFO_IS_FROM_API = true
+
 # base api
 VUE_APP_BASE_API = '/hosts/www/public/'
 
