修正脚本url 路劲

--- a/ui/merchant/.env.production
+++ b/ui/merchant/.env.production
@@ -4,10 +4,12 @@ NODE_ENV = production
 ENV = 'production'
 
 # 是否需要向后台请求获取系统信息，当这个选项等于false，系统后台修改了配置信息后，浏览器中展示的系统信息不能更新
-VUE_APP_SYSTEM_INFO_IS_FROM_API = true
+#VUE_APP_SYSTEM_INFO_IS_FROM_API = true
+VUE_APP_SYSTEM_INFO_IS_FROM_API = false
 
 # base api
-VUE_APP_BASE_API = '/hosts/www/public/'
+# VUE_APP_BASE_API = '/hosts/www/public/'
+VUE_APP_BASE_API = ''
 
 # file upload url
-VUE_APP_UPLOAD_URL = '/hosts/files/public/upload/image/merchant-files'
+VUE_APP_UPLOAD_URL = 'http://file.qirifu.asbamboo.com/upload/image/merchant-files'
