--- a/ui/facilitator/.env.production
+++ b/ui/facilitator/.env.production
@@ -2,4 +2,5 @@
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = '/hosts/admin/public/'
+# VUE_APP_BASE_API = '/hosts/admin/public/'
+VUE_APP_BASE_API = ''
