上传图片因跨域问题修改为在相同域名下上传

--- a/ui/merchant/.env.production
+++ b/ui/merchant/.env.production
@@ -12,4 +12,4 @@ VUE_APP_SYSTEM_INFO_IS_FROM_API = false
 VUE_APP_BASE_API = ''
 
 # file upload url
-VUE_APP_UPLOAD_URL = 'http://file.qirifu.asbamboo.com/upload/image/merchant-files'
+VUE_APP_UPLOAD_URL = '/upload/image/merchant-files'
